--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     "require": {
         "craftcms/cms": "^5.0.0-alpha.1",
         "deeplcom/deepl-php": "^1.5",
-        "google/cloud-translate": "^1.16"
+        "google/cloud-translate": "^1.16",
+        "ext-dom": "*",
+        "ext-libxml": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
